CHANGES IN VERSION 1.5.7
-------------------------

NEW FEATURES

    o a new argument 'seldim' in `assign.gdsn()`

    o `append.gdsn()` allows appending data from a GDS node

    o `add.gdsn()` allows 'storage' to be a 'gdsn.class' object

    o `put.attr.gdsn()` allows 'val' to be a 'gdsn.class' object

    o a new function `copyto.gdsn()`

SIGNIFICANT USER-VISIBLE CHANGES

    o discontinue the support of SNPRelate (<= v0.9.*)

BUG FIXES

    o fix an issue in `print.gdsn.class()` if hidden nodes are included


CHANGES IN VERSION 1.5.0-1.5.6
-------------------------

NEW FEATURES

    o adjust for Xcode 6.3.1

    o LZ4 library is updated to r131

    o a new argument 'include.hidden' is added to the functions `cnt.gdsn()`
      and `ls.gdsn()`

    o define `GDS_MAX_NUM_DIMENSION` and `GDS_R_READ_DEFAULT_MODE` in
      "include/R_GDS.h"

    o a new C function `GDS_R_SEXP2FileRoot()` in "include/R_GDS.h"

    o improve the terminal output via the package crayon

SIGNIFICANT USER-VISIBLE CHANGES

    o increase test coverage

BUG FIXES

    o v1.5.1: bug fix https://github.com/zhengxwen/gdsfmt/issues/9

    o v1.5.5: bug fix https://github.com/zhengxwen/gdsfmt/issues/10


CHANGES IN VERSION 1.4.0
-------------------------

    o the version number was bumped for the Bioconductor release version


CHANGES IN VERSION 1.3.0-1.3.11
-------------------------

NEW FEATURES

    o a new argument 'visible' is added to the functions `add.gdsn()`,
      `addfile.gdsn()` and `addfolder.gdsn()`

    o `objdesp.gdsn()` returns 'encoder' to indicate the compression algorithm

    o add a new function `system.gds()` showing system configuration

    o support efficient random access of zlib compressed data,
      which are composed of independent compressed blocks

    o support LZ4 compression format (http://code.google.com/p/lz4/),
      based on "lz4frame API" of r128

    o allow R RAW data (interpreted as 8-bit signed integer) to replace